--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "test": "tests"
   },
   "scripts": {
-    "test": "mocha"
+    "test": "chutzpah.console.bat chutzpah.json"
   },
   "repository": {
     "type": "git",
@@ -18,5 +18,12 @@
   "bugs": {
     "url": "https://github.com/MeltingMosaic/zip.js/issues"
   },
-  "homepage": "https://github.com/MeltingMosaic/zip.js#readme"
+  "homepage": "https://github.com/MeltingMosaic/zip.js#readme",
+  "devDependencies": {
+    "chai": "^3.5.0",
+    "mocha": "^3.1.2"
+  },
+  "dependencies": {
+    "requirejs": "^2.3.2"
+  }
 }
